syntax = "proto3";

import "google/protobuf/empty.proto"; // Import the Empty type

package VirtualizedGrid.Protos;

service PartService {
    rpc GetParts (PartsRequest) returns (stream CompressedPartsBatch); // Use a defined message type here
    rpc GetPartsCount (google.protobuf.Empty) returns (PartsCountResponse);
}

message PartsRequest {
    int32 chunk_size = 1;
}

// New message to represent compressed data
message CompressedPartsBatch {
    bytes data = 1; // Compressed data will be stored in this field
}

// Message to represent a batch of Part objects before compression
message PartsBatch {
    repeated Part parts = 1; // List of uncompressed Part objects
}

message Part {
    string id = 1;
    string name = 2;
    string creation_date = 3;
    PartStatus status = 4;
}

message PartsCountResponse {
    int32 total_count = 1;
}

enum PartStatus {
    AVAILABLE = 0;
    OUT_OF_STOCK = 1;
    DISCONTINUED = 2;
    BACK_ORDER = 3;
}
